# WEAVESS

./: .gitignore  CMakeLists.txt  LICENSE  README.md
algo/ieh/: LSH_compress.m  LSH_learn.m  LSHrun.m  excshell.py
algo/knn/: CMakeLists.txt  gen_knn.cpp
cmake/module/: FindOpenBLAS.cmake
dataset/: CMakeLists.txt  README.md  main.cpp  other2vecs.py
include/weavess/: CommonDataStructure.h  builder.h  component.h  distance.h  exp_data.h  index.h  index_base.h  index_builder.h  index_component.h  index_component_coarse.h  index_component_connect.h  index_component_init.h  index_component_load.h  index_component_prune.h  index_random.h  matplotlibcpp.h  min_heap.h  neighbor.h  parameters.h  policy.h  util.h
ml/: README.md
parameters/: README.md
src/: CMakeLists.txt  builder.cpp  component_candidate.cpp  component_conn.cpp  component_entry.cpp  component_init.cpp  component_load.cpp  component_prune.cpp  component_refine.cpp  component_route.cpp  component_search_entry.cpp  component_serialization.cpp  index.cpp  index_base.cpp  index_component_coarse.cpp  index_component_conn.cpp  index_component_entry.cpp  index_component_eva.cpp  index_component_init.cpp  index_component_load.cpp  index_component_prune.cpp  index_component_refine.cpp  index_component_route.cpp  index_component_search.cpp  index_graph.cpp  index_random.cpp
test/: CMakeLists.txt  DistanceTest.cpp  IndexTest.cpp  UtilTest.cpp  algo_test.cpp  continue_excshell.py  excshell.py  main.cpp  test.cpp
